# ors_serial

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
lib/: ors_serial.dart  ors_serial_native.dart
lib/src/: ors_serial_bindings_generated.dart
macos/: ors_serial.podspec
macos/Classes/: native_orsserial_bindings.m
src/: CMakeLists.txt  ors_serial.c
